# HollowsGraphicsEngine

./: ,gitignore  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  DOCS_README.md  GenerateProject.bat  Hollows Engine.sublime-workspace  LICENSE  Makefile  README.md  The_Hollows_Engine.sln  build_windows.bat  conanfile.py  conanfile.py.bak  generate_project_gmake_clang.bat  main.cpp  make_output.txt  odin_curse.odin  odin_sublime.sublime-project  odin_sublime.sublime-workspace  ols.json  premake5.lua  test.gltf  test_compute.glsl
AI/: PROJECT_CONTEXT.md
AI/_archive/: README.md  backup.md  naming.md  organization.md  research.md  task_management.md  workflow.md
AI/_backups/: COPILOT_INSTRUCTIONS.md  naming.md  organization.md  research.md  task_management.md
AI/workflow/: workflow.md
Plan/: zed with odin.md
Plan/Spatial Engine/: Handling arrays.md  sorting arrays
Sandbox/: CMakeLists.txt  main.cpp
assets/: test.gltf
bin-int/Debug-windows-x86_64/Assets/: Application.d  Assets.exe.recipe  Assets.ilk  vc143.idb
bin-int/Debug-windows-x86_64/Assets/Assets.tlog/: Assets.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bin-int/Debug-windows-x86_64/Hollows_Engine/: Hollows_Engine.dll.recipe  Hollows_Engine.ilk  test.d  vc143.idb
bin-int/Debug-windows-x86_64/Hollows_Engine/Hollows_Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
doc/: Doxyfile.in
engine/include/: Engine.h
engine/src/: Engine.cpp
image_debug_output/logs/: 04  07  09  10
modules/graphics/include/: Graphics.h
modules/graphics/src/: Graphics.cpp
resources/: icon.rc  icon.res
src/: Hollows.h  main.odin  src.rdi  test_compute.glsl
src/assets/: 1mSphere.glb  Application.cpp  Assets.vcxproj  Client.cpp  HollowsApp.cpp  Makefile
src/core/data/: data.odin
src/core/imports/imports_local/: imports_local.odin
src/core/imports/imports_vendor/: imports_vendor.odin
src/core/modules/model/: model_load.odin
src/core/modules/render/: render.odin
src/core/modules/window/: window.odin
src/core/testing/: cache_system.odin  calcs.odin  core_loop.odin  debug.odin  file_management.odin  model_load.odin  render.odin  testing.odin
src/core/testing/depracated/: bilinear search ref.txt  spatial_hash.odin
src/engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Hollows_Engine.vcxproj  LocalIncludes.h  Makefile  main.cpp  test.cpp  test.h
src/engine/global_variables/: Variables_Core.cpp  Variables_Core.hpp
src/engine/systems/core/modules/data_type/: Preset.cpp  Preset.h
src/engine/systems/core/modules/process/: Log.cpp  Log.h
src/engine/tmp_Testing/: Tutorial01_HelloTriangle.cpp  Tutorial01_HelloTriangle.hpp
src/image_debug_output/logs/: 03  05  06
src/sandbox/: Makefile
